--- a/Pages/trangchu.html
+++ b/Pages/trangchu.html
@@ -12,7 +12,6 @@
 <body>
     <header>
         <a href="trangchu.html" id="logo"><img src="/data/images/logo.png" height="45" alt="" ></a>
-        <!-- <img src="/data/images/logo.png" alt="logofreeeze" onclick="go()"> -->
             <table class="header_img">
                 <tr>
                     <td><img src="../data/images/header-img1.png" class="header1" height="85px" alt=""></td>
@@ -31,9 +30,11 @@
                 <a href="lienhe.html">Liên Hệ</a>
             </div>
             <div class="icon">
-                <input type="text" placeholder="Nhập nội dung tìm kiếm">
-                <i class="fas fa-search"></i>
-                <i class="fas fa-shopping-cart"></i>
+                <form id="search-form" action="/Pages/timkiem.html" method="get">
+                    <input id="input-search" type="text" placeholder="Nhập nội dung tìm kiếm"  onkeydown="preventSubmitOnEnter(event)">
+                    <i class="fas fa-search" onclick="submitFunction()"></i>
+                    <i class="fas fa-shopping-cart" onclick="go_shopping()"></i>
+                </form>
             </div>
         </nav>
     </header>
@@ -116,13 +117,21 @@
         </p>
     </footer>
     <script>
-        function go() {
-            window.location="trangchu.html";
+        var submitFunction= () => {
+            let inputSearch = document.getElementById("input-search");
+            let formSearch = document.getElementById("search-form");
+            inputSearch.value=inputSearch.value.trim();
+            if(inputSearch.value!="") formSearch.submit();
         }
-        document.getElementById('goHead').addEventListener("click", function(){
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-});
+        var preventSubmitOnEnter = (e) => {
+            if (e.key === "Enter") {
+                e.preventDefault();
+                submitFunction();
+            }
+        }
+        var go_shopping=() => {
+            window.location.href="dongia.html";
+        }
     </script>
 </body>
 </html>
